13/09/2018 – v6.4 • Added Shipping Details to Create Return Order (Non PDA Returns). • Aligned Statistics User Control to main page with logo and title label. • Fixed Font of Navbar Header.

--- a/ExcelDesign/css/mainpage.css
+++ b/ExcelDesign/css/mainpage.css
@@ -1,4 +1,12 @@
-﻿.SearchArea {
+﻿#ServiceCenterHeader {
+    position: relative;
+}
+
+#StatisticsOnService {
+    position:absolute;
+}
+
+.SearchArea {
     text-align: center;
     vertical-align: middle;
 }
@@ -29,6 +37,7 @@ td {
     background-color: #507CD1;
     height: 30px;
     position: fixed;
+    font-family: Calibri;
 }
 
     .HeaderNavbar ul {
